# zinc-os

./: Cargo.toml  README.md
.cargo/: config.toml
src/: interrupts.rs  lib.rs  main.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs
zinc-os-kernel/: Cargo.toml  LICENSE.md
zinc-os-kernel/src/: fatalpanic.rs  interrupts.rs  lib.rs  main.rs
zinc-os-kernel/tests/: basic_boot.rs  should_panic.rs
zinc-os-test/: Cargo.toml
zinc-os-test/src/: main.rs  vga_buffer.rs
