[package]
name = "zinc-os"
version = "0.1.0"
edition = "2021"
authors = ["Joseph Hans Díaz González <eliotvonecklie@gmail.com>"]

[dependencies]
bootloader = "^0.9"
volatile = "0.2.6"
lazy_static = { version = "1.0", features= ["spin_no_std"] }
spin = "0.5.2"

[package.metadata.bootimage]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic